# Fluid-Simulation

./: .gitignore  CMakeLists.txt  Makefile  README.md  apic_demo  app  fluid  main.cpp  particle  particle_init.py  particles  particles.json  picflip_demo  run.sh  test.h  tri
apic_demo.dSYM/Contents/: Info.plist
fluids/: 100center.apic  100left.apic  100par.pic  100particles.par  400left.apic  400particles.par  apicGenerator.cpp  apic_gen  gridGenerator.cpp  grid_gen  grid_generator  no_velocity.grid  particleGenerator.cpp  particle_gen  picGenerator.cpp  pic_gen  template.grid  template.par  template_1.grid  test.apic  test.par  test.pic  test1.par
fluids/grid/: 10.grid  15.grid  20.grid  50.grid
fluids/particle/: 400particles.par
picflip_demo.dSYM/Contents/: Info.plist
report/: report copy.aux  report copy.run.xml  report copy.tex  report.aux  report.bbl  report.bcf  report.blg  report.fdb_latexmk  report.fdb_latexmk~Stashed changes  report.fls  report.run.xml  report.tex
report/Bibliography/: Bibliography.bib
report/Sections/: 01-Introduction.tex  02-Background.tex  03-Implementation.tex  grid.tex
report/sections/: 04-Comparison.tex  04-Results.tex  05-Discussion.tex  06-Conclusion.tex  apic.tex  particle.tex  pic.tex
src/: Vec2.h  constants.h  grid  grid.cpp  grid.h  input.cpp  input.h  main.cpp  particle  particle.cpp  particle.h  particleSystem.cpp  particleSystem.h
src/apic_method/: array1.h  array2.h  array2_utils.h  blas_wrapper.h  fluidsim.cpp  fluidsim.h  kernel.h  main_apic.cpp  math_defs.h  pcg_solver.h  sorter.cpp  (+3 more)
videos/: grid1.mov
(+13 files in other folders)
